k8s/apps/taberna/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taberna
  labels:
    app: taberna
