k8s/apps/taberna/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taberna
  namespace: taberna
  labels:
    app: taberna
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taberna
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: taberna
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: mgc-registry-credentials
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: tier
                operator: In
                values:
                - standard
      tolerations:
      - key: tier
        value: standard
        effect: NoSchedule
      containers:
        - name: taberna
          image: container-registry.br-se1.magalu.cloud/my-registry/taberna:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
