k8s/apps/taberna/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taberna
  namespace: taberna
  labels:
    app: taberna
spec:
  type: ClusterIP
  selector:
    app: taberna
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
